fixed height on smaller screens about modal

--- a/src/partials/_aboutModal.scss
+++ b/src/partials/_aboutModal.scss
@@ -134,5 +134,6 @@
 @media screen and (max-width: 670px) {
   .aboutContent {
     width: 80%;
+    height: 80%;
   }
 }
